--- a/CS510_Project/POC_Build_01/index.html
+++ b/CS510_Project/POC_Build_01/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/POC_Build_01.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/POC_Build_01.data.br",
-        frameworkUrl: buildUrl + "/POC_Build_01.framework.js.br",
-        codeUrl: buildUrl + "/POC_Build_01.wasm.br",
+        dataUrl: buildUrl + "/POC_Build_01.data",
+        frameworkUrl: buildUrl + "/POC_Build_01.framework.js",
+        codeUrl: buildUrl + "/POC_Build_01.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "cs510_Project",
